# OverSync

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  ROADMAP.md  env.example  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
soroban/: .gitignore  Cargo.toml  README.md
soroban/contracts/htlc/: Cargo.toml
soroban/contracts/htlc/src/: lib.rs  test.rs
soroban/contracts/htlc/test_snapshots/test/: admin_can_update_min_safety_deposit.1.json  claim_after_expiry_fails.1.json  claim_with_wrong_preimage_fails.1.json  clear_resolver_registry_restores_permissionless_create_order.1.json  create_order_rejects_resolver_made_inactive_by_slash.1.json  create_order_rejects_unregistered_sender_when_registry_is_set.1.json  create_order_succeeds_for_active_registered_resolver.1.json  double_claim_fails.1.json  happy_path_create_and_claim.1.json  initialise_twice_fails.1.json  order_ttl_bumped_on_claim.1.json  order_ttl_bumped_on_create.1.json  order_ttl_bumped_on_refund.1.json  refund_after_claim_fails.1.json  refund_after_timeout_pays_refund_address.1.json  safety_deposit_minimum_enforced.1.json  timelock_outside_bounds_rejected.1.json
soroban/contracts/resolver-registry/: Cargo.toml
soroban/contracts/resolver-registry/src/: lib.rs  test.rs
soroban/contracts/resolver-registry/test_snapshots/test/: double_register_fails.1.json  happy_path_register_and_unregister.1.json  increase_stake_updates_info.1.json  resolver_entry_removed_on_unregister.1.json  resolver_ttl_bumped_on_increase_stake.1.json  resolver_ttl_bumped_on_slash.1.json  resolver_ttl_set_on_register.1.json  slash_below_minimum_deactivates_resolver.1.json  stake_below_minimum_rejected.1.json
soroban/scripts/: deploy.sh
(+106 files in other folders)
