[workspace]
resolver = "2"
members = [
    "contracts/htlc",
    "contracts/resolver-registry",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/karagozemin/OverSync-1nchFusion"
homepage = "https://github.com/karagozemin/OverSync-1nchFusion"
authors = ["OverSync contributors"]

[workspace.dependencies]
soroban-sdk = "22.0.8"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
